--- a/storm.html
+++ b/storm.html
@@ -2,7 +2,12 @@
     <title>Animations</title>
     <link rel="stylesheet" type="text/css" href="storm.css">
     <meta charset="UTF-8">
+    
 </head>    
 <body>
-    <script src="storm.js"></script>
+    <script type="text/javascript" src="cache.js"></script>
+    <script type="text/javascript" src="sprite.js"></script>
+    <script type="text/javascript" src="electroball.js"></script>
+    <script type="text/javascript" src = "storm.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
