More abilities and a readme added

--- a/storm.html
+++ b/storm.html
@@ -7,7 +7,7 @@
 <body>
     <script type="text/javascript" src="cache.js"></script>
     <script type="text/javascript" src="sprite.js"></script>
-    <script type="text/javascript" src="electroball.js"></script>
-    <script type="text/javascript" src = "storm.js"></script>
+    <script type="text/javascript" src="dumbfire_eff.js"></script>
+    <script type="text/javascript" src ="storm.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
